<resources>

    <string name="app_name">News System</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start_main">StartMainActivity</string>
    <string name="startApp">Start Run</string>
    <string name="news">news</string>
    <string name="olds">view</string>
    <string name="air">air</string>
    <string name="fnews">blog</string>
    <string name="tip_wait">Please wait...</string>
    <string name="tip_error">no new data</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="love">Love</string>
    <string name="top">Top</string>
    <string name="down">Down</string>
    <string name="end">The last page ...</string>
    <string name="more">More</string>
    <string name="clientprotocolexception">clientprotocolerror</string>
    <string name="socketexception">socketerror</string>
    <string name="sockettimeoutexception">sockettimeout</string>
    <string name="exception">unkownerror</string>
    <string name="unsupportedencodingexception">unsupportedencoding</string>
    <string name="nomore">nomore</string>
    <string name="jsonexception">jsonerror</string>
    <string name="parseexception">parseerror</string>
    <string name="pull_to_refresh_pull_label">refresh</string>
    <string name="pull_to_refresh_refresh_lasttime">refresh time</string>
    <string name="more_data">more</string>
    <string name="load_more">load more</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="tweet_pub_head_title">发布微博</string>
     <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>
    <string name="delete_image">删除图片</string>
    <string name="sure">确认</string>
    <string name="cancle">取消</string>
    
      
</resources>