<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >

    <Button
        android:id="@+id/btnFavrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share" />

    <Button
        android:id="@+id/btnNewComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment" />

    <Button
        android:id="@+id/btnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down" />

</LinearLayout>